<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_location"
            style="?attr/text_grey"
            android:layout_marginTop="50dp"
            android:textStyle="normal"
            android:textSize="25sp"
            android:layout_gravity="center"/>

    <TextView
            android:focusable="true"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            style="?attr/text_grey"
            android:text="@string/fragment_location_description"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"/>
    <Button
            style="?button_style"
            android:text="@string/find_location"
            android:onClick="findLocation"
            android:drawableStart="@drawable/ic_arrow_white"
            android:layout_marginTop="30dp"
            android:id="@+id/btnToAirQuality"/>

    <Button
            style="?button_style"
            android:text="@string/no_maybe"
            android:onClick="toNotification"
            android:layout_marginTop="10dp"
            android:id="@+id/toSearch"
            android:background="@drawable/caeli_button"/>


</LinearLayout>