<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_notification"
            style="?attr/text_grey"
            android:layout_marginTop="50dp"
            android:textStyle="normal"
            android:textSize="25sp"
            android:layout_gravity="center"/>

    <TextView
            android:focusable="true"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_push"
            android:layout_gravity="center"
            android:gravity="center"
            style="?attr/text_grey"
            android:layout_marginTop="30dp"/>
    <Button
            style="?button_style"
            android:text="@string/notification_yes"
            android:drawableStart="@drawable/ic_notifications"
            android:layout_marginTop="30dp"
            android:id="@+id/btnSendNotification"
            android:onClick="setNotification"
            android:background="@drawable/caeli_button"/>

    <Button
            style="?button_style"
            android:text="@string/no_maybe"
            android:layout_marginTop="10dp"
            android:id="@+id/btnToLocation"
            android:onClick="toSearch"
            android:background="@drawable/caeli_button"/>


</LinearLayout>