<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_layout"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

    <android.support.constraint.ConstraintLayout
            android:paddingTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout"
            tools:context=".AboutUs">

        <ImageView
                android:layout_width="411dp"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:id="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/about_us"
                android:contentDescription="@string/about_us"/>

        <TextView
                android:focusable="true"
                android:id="@+id/AboutusTitle"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_caeli"
                android:textSize="25sp"
                style="?attr/text_dark"
                android:fontFamily="@font/raleway_extralight_local"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                app:layout_constraintBottom_toTopOf="@id/line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <View
                android:id="@+id/line"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:layout_width="145dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/AboutusTitle"
                app:layout_constraintBottom_toTopOf="@id/textView2"/>

        <TextView
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/textView2"
                android:textAlignment="center"
                android:text="@string/info_caeli"
                style="?attr/text_dark"
                android:lineSpacingExtra="4dp"
                app:layout_constraintTop_toBottomOf="@+id/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/kontaktknapp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <Button
                style="?button_style"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_send_white"
                android:text="@string/tittel_contactus"
                android:layout_width="150dp"
                android:id="@+id/kontaktknapp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <android.support.v7.widget.Toolbar
                android:theme="?tb_font_grey_extralight"
                style="?toolbar_style"
                android:id="@+id/toolbar2" />

        <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </LinearLayout>

    <android.support.design.widget.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:id="@+id/nav_view"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/drawer_menu"
            android:theme="?drawerText"/>

</android.support.v4.widget.DrawerLayout>