<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_layout"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        style="?pageBackground">

    <android.support.constraint.ConstraintLayout
            android:paddingTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ContactUs">

        <android.support.constraint.ConstraintLayout
                android:id="@+id/email"
                style="?emailBackground"
                android:layout_width="339dp"
                android:layout_height="472dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0">

            <TextView
                    android:focusable="true"
                    android:id="@+id/hvagjelder"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:text="@string/email_topic"
                    android:layout_gravity="center"
                    style="?emailFont"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="4dp"
                    app:layout_constraintHorizontal_bias="0.358">
            </TextView>

            <Spinner
                    android:focusable="true"
                    android:id="@+id/velgtema"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:entries="@array/feedbacklist"
                    android:layout_gravity="center"
                    android:theme="?spinner"
                    android:layout_below="@+id/hvagjelder"
                    android:layout_alignStart="@+id/navnefelt"
                    android:layout_above="@+id/navnefelt"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/navnefelt"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/hvagjelder"
                    android:layout_marginStart="16dp"
                    app:layout_constraintVertical_bias="0.325"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.4">
            </Spinner>

            <EditText
                    android:focusable="true"
                    android:id="@+id/navnefelt"
                    android:layout_height="46dp"
                    android:hint="@string/email_name"
                    android:inputType="textPersonName"
                    android:layout_width="0dp"
                    style="?emailFont"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toTopOf="@+id/tilbakemelding"
                    app:layout_constraintHorizontal_bias="0.45">
            </EditText>


            <EditText
                    android:focusable="true"
                    android:id="@+id/tilbakemelding"
                    android:hint="@string/email_content"
                    style="?emailFont"
                    android:inputType="text"
                    android:layout_width="294dp"
                    android:gravity="top"
                    android:layout_alignParentBottom="true"
                    android:layout_alignEnd="@+id/velgtema"
                    android:lines="7"
                    android:layout_below="@+id/navnefelt"
                    android:layout_height="155dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/onskersvar">
            </EditText>

            <CheckBox
                    android:focusable="true"
                    android:id="@+id/onskersvar"
                    android:layout_height="49dp"
                    android:text="@string/email_feedback"
                    android:layout_width="0dp"
                    style="?checkbox"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/btnOK"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="8dp">
            </CheckBox>

            <Button
                    android:id="@+id/btnOK"
                    android:text="@string/email_send"
                    style="?button_style"
                    android:textSize="12sp"
                    android:layout_width="150dp"
                    android:layout_centerHorizontal="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
            >
            </Button>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <android.support.v7.widget.Toolbar
                android:theme="?tb_font_white_extralight"
                style="?toolbar_style"
                android:id="@+id/toolbar2"/>

        <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </LinearLayout>

    <android.support.design.widget.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:id="@+id/nav_view"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/drawer_menu"
            android:theme="?drawerText"/>


</android.support.v4.widget.DrawerLayout>